# StoryCrew

./: README.md  pyproject.toml
src/hume/: main.py  types.py
src/hume/crews/character_crew/: character_crew.py
src/hume/crews/character_crew/config/: agents.yaml  tasks.yaml
src/hume/crews/dialog_crew/: dialog_crew.py
src/hume/crews/dialog_crew/config/: agents.yaml  tasks.yaml
src/hume/crews/editing_crew/: editing_crew.py
src/hume/crews/editing_crew/config/: agents.yaml  tasks.yaml
src/hume/crews/idea_crew/: idea_crew.py
src/hume/crews/idea_crew/config/: agents.yaml  tasks.yaml
src/hume/crews/image_crew/: image_crew.py
src/hume/crews/image_crew/config/: agents.yaml  tasks.yaml
src/hume/crews/writing_crew/: writing_crew.py
src/hume/crews/writing_crew/config/: agents.yaml  tasks.yaml
